# personal_tolosa_tools

./: .gitignore  README.md  pyproject.toml
TOLOSA_Main_Perso/: Plot_2d_tri.py  claude_output.py  main_claude.py
TOLOSA_Toolbox/: vtk_plotter_lib.py
personal_tolosa_tools/: __init__.py  common.py  initialize_logs.py  plotters.py  processors.py  readers.py  vtk_plotter_lib.py  wrappers.py  yaml_meshtool.py
scripts/: Plot_2d.py  Test_de_base.py  launch_meshtool_yaml.sh  launch_meshtool_yaml_all_tools.py  launch_yaml_create_default.py  main_claude.py
scripts/legacy/: V1_launch_shp_createinter_shp_reso.py  initialize_script.sh  launch_change_regionaldepth_mesh_tif.py  launch_meshtool_yaml_shp_tif_tool.py
scripts/tools/: change_file_key_value.py  change_init_file_key_value.py  launch_change_regionaldepth_mesh_tif.py  launch_cini_initialize_folder.csh  launch_cini_initialize_folder.sh  launch_compare_gauge_refmar.py  launch_crop_reproj_tiffile.py  launch_csv_compare_all.py  launch_csv_plot_gaugedata.py  launch_figs_create_hydro_recap_latex.sh  launch_figs_create_latex.sh  launch_figs_create_mesh_recap_latex.sh  launch_fillnan_shpfile.py  launch_global_tide.sh  launch_grib2tolosa_mesh_grib.sh  launch_mesh_change_file_key_value.sh  launch_mesh_check.py  launch_mesh_convert_tolosa_to_ww3.py  launch_mesh_correct_dupli_degen.py  launch_mesh_correct_mergenodes.py  launch_mesh_correct_swapedges.py  launch_mesh_plot_mesh.py  launch_mesh_resetforcings_file.sh  launch_meshtool_yaml.sh  launch_meshtool_yaml_all_tools.py  launch_meshtool_yaml_shp_tif_tool.py  launch_prmsl_ref.sh  (+16 more)
(+13 files in other folders)
