[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal_tolosa_tools"
version = "0.0.1"
description = "Personal Tolosa mesh/data toolbox"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "shapely",
    "meshio",
    "vtk",
    "dask",
    "pyyaml",
]

[tool.setuptools.packages.find]
include = ["personal_tolosa_tools*"]
